--- a/Sites/rails-app/config/database.yml
+++ b/Sites/rails-app/config/database.yml
@@ -9,22 +9,21 @@ default: &default
   encoding: unicode
   username: postgres
   password: postgres
-  database: postgres
   host: db
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development
+  database: db/rails-blog-development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test
+  database: db/rails-blog-test
 
 production:
   <<: *default
-  database: db/production
+  database: db/rails-blog-production
